--- a/PhantomClone/PhantomClone.vcxproj
+++ b/PhantomClone/PhantomClone.vcxproj
@@ -134,7 +134,7 @@
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>C:\Program Files %28x86%29\Sensoray\826\API;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\KCY\OneDrive - University of Reading\Documents\GitHub\My_PhantomClone\api\x64;C:\Program Files %28x86%29\Sensoray\826\API;C:\Users\KCY\OneDrive - University of Reading\Documents\GitHub\My_PhantomClone\api;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>
@@ -142,7 +142,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <Lib>
-      <AdditionalLibraryDirectories>C:\Users\Koray\Documents\GitHub\My_PhantomClone\PhantomClone\x64\Debug;C:\Program Files %28x86%29\Sensoray\826\API\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\KCY\OneDrive - University of Reading\Documents\GitHub\My_PhantomClone\api\x64;C:\Users\Koray\Documents\GitHub\My_PhantomClone\PhantomClone\x64\Debug;C:\Program Files %28x86%29\Sensoray\826\API\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>s826.lib</AdditionalDependencies>
     </Lib>
   </ItemDefinitionGroup>
@@ -156,7 +156,7 @@
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>C:\Program Files %28x86%29\Sensoray\826\API;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\KCY\OneDrive - University of Reading\Documents\GitHub\My_PhantomClone\api\x64;C:\Program Files %28x86%29\Sensoray\826\API;C:\Users\KCY\OneDrive - University of Reading\Documents\GitHub\My_PhantomClone\api;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>
@@ -166,7 +166,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <Lib>
-      <AdditionalLibraryDirectories>C:\Program Files %28x86%29\Sensoray\826\API\x64;C:\Program Files %28x86%29\Sensoray\826\API\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\KCY\OneDrive - University of Reading\Documents\GitHub\My_PhantomClone\api\x64;C:\Program Files %28x86%29\Sensoray\826\API\x64;C:\Program Files %28x86%29\Sensoray\826\API\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>s826.lib</AdditionalDependencies>
     </Lib>
   </ItemDefinitionGroup>
